@@ -1,3 +1,9 @@
+2007-05-11  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* Banter.mdp, Banter/Makefile.am: Added PersonSync.cs to project
+	* Banter/PersonSync.cs: Created the person sync class.  This class will
+	  be in charge of the sync between Telepathy and EDS.
+
 2007-05-11  Brady Anderson <banderso@novell.com> 
 
 	* Banter/Account.cs: refactor code to match the changes in
